slurm-6290.out
  File "slayer_network_rgb.py", line 64
    'cuda': False
          ^
SyntaxError: invalid syntax
